force-app/main/default/objects/NSF_Exam_Answer_Candidates__c/NSF_Exam_Answer_Candidates__c.object-meta.xml
<CustomObject>
    <label>NSF Exam Answer Candidate</label>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NSF Exam Answer Candidates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>