force-app/main/default/objects/NSF_Exam_Answer_Candidates__c/fields/NSF_Exam_ItemId__c.field-meta.xml
<CustomField>
    <fullName>NSF_Exam_ItemId__c</fullName>
    <label>Exam Item</label>
    <referenceTo>NSF_Exam__c</referenceTo>
    <relationshipLabel>Answer Candidates</relationshipLabel>
    <relationshipName>NSF_Answer_Candidates</relationshipName>
    <type>MasterDetail</type>
</CustomField>