force-app/main/default/objects/NSF_Exam_Answer_Candidates__c/fields/Possible_Answer__c.field-meta.xml
<CustomField>
    <fullName>Possible_Answer__c</fullName>
    <label>Possible Answer</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>